<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_fon"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:src="@drawable/beeline"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment,NestedWeights">

            <LinearLayout
                android:id="@+id/tariflar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tariflar_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_tarif"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tariflar_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tariflar"
                    android:textColor="@color/black"
                    android:textSize="27sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ilovalar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ilovalar_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_ilovalar"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/ilovalar_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ilovalar"
                    android:textColor="@color/black"
                    android:textSize="27sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/xizmatlar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/xizmatlar_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_xizmat"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/xizmatlar_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/xizmatlar"
                    android:textColor="@color/black"
                    android:textSize="27sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/internet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/internet_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_internet"
                    tools:ignore="ContentDescription,NestedWeights" />

                <TextView
                    android:id="@+id/internet_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/internet"
                    android:textColor="@color/black"
                    android:textSize="27sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sms_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_sms"
                    tools:ignore="ContentDescription,NestedWeights" />

                <TextView
                    android:id="@+id/sms_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sms"
                    android:textColor="@color/black"
                    android:textSize="27sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>